--- a/test/fixtures/bloques.yml
+++ b/test/fixtures/bloques.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+bloque_1:
   nombre: MyString
   descripcion: MyString
-  tipo: MyString
+  tipo: D
 
-two:
+bloque_2:
   nombre: MyString
   descripcion: MyString
-  tipo: MyString
+  tipo: L
