--- a/test/fixtures/instrumentos.yml
+++ b/test/fixtures/instrumentos.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  nombre: MyString
-  descripcion: MyString
+instrumento_1:
+  nombre: Instrumento 1
+  descripcion: Descripción del Instrumento 1
 
-two:
-  nombre: MyString
-  descripcion: MyString
+instrumento_2:
+  nombre: Instrumento 2
+  descripcion: Descripción del Instrumento 2
