--- a/test/fixtures/tipos_pregunta.yml
+++ b/test/fixtures/tipos_pregunta.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+tipo_pregunta_1:
   nombre: MyString
   valor: MyString
   valor_html: MyString
 
-two:
+tipo_pregunta_2:
   nombre: MyString
   valor: MyString
   valor_html: MyString
