--- a/test/fixtures/tokens.yml
+++ b/test/fixtures/tokens.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+token_1:
   token: MyString
   hash_sum: MyString
 
-two:
+token_2:
   token: MyString
   hash_sum: MyString
