--- a/test/fixtures/periodos_academicos.yml
+++ b/test/fixtures/periodos_academicos.yml
@@ -2,10 +2,10 @@
 
 periodo_academico_1:
   periodo: 01-2012
-  hash_sum: sadghjdkhds
+  asignaturas_hash_sum: sadghjdkhds
   sincronizacion: 2015-01-28 15:54:55
 
 periodo_academico_2:
   periodo: 02-2012
-  hash_sum: fadsdgjkjtr
+  asignaturas_hash_sum: fadsdgjkjtr
   sincronizacion: 2015-01-28 15:54:55
